2024-10-05  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_print_format_any): Emit
	`NUMBER as INTEGRAL_TYPE' for printing of weird integers which is
	a valid Poke syntax instead of `(INTEGRAL_TYPE) NUMBER'.
	* libpoke/pvm-val.c (pvm_print_val_1): Likewise.
	* testsuite/poke.map/ass-map-20.pk: Update to match the new output.
	* testsuite/poke.map/maps-int-05.pk: Likewise.
	* testsuite/poke.map/maps-int-09.pk: Likewise.
	* testsuite/poke.map/maps-int-11.pk: Likewise.
	* testsuite/poke.map/maps-int-13.pk: Likewise.
	* testsuite/poke.map/maps-int-18.pk: Likewise.
	* testsuite/poke.map/maps-int-19.pk: Likewise.
	* testsuite/poke.map/maps-int-20.pk: Likewise.
	* testsuite/poke.map/maps-int-21.pk: Likewise.
	* testsuite/poke.map/maps-int-22.pk: Likewise.
	* testsuite/poke.map/maps-int-23.pk: Likewise.
	* testsuite/poke.map/maps-int-24.pk: Likewise.
	* testsuite/poke.map/maps-int-26.pk: Likewise.
	* testsuite/poke.map/maps-int-30.pk: Likewise.
	* testsuite/poke.map/maps-int-32.pk: Likewise.
	* testsuite/poke.map/maps-int-34.pk: Likewise.
	* testsuite/poke.map/maps-int-35.pk: Likewise.
	* testsuite/poke.map/maps-int-36.pk: Likewise.
	* testsuite/poke.map/maps-int-38.pk: Likewise.
	* testsuite/poke.map/maps-int-39.pk: Likewise.
	* testsuite/poke.map/maps-int-40.pk: Likewise.
	* testsuite/poke.map/maps-int-42.pk: Likewise.
	* testsuite/poke.map/maps-int-43.pk: Likewise.
	* testsuite/poke.map/maps-int-44.pk: Likewise.
	* testsuite/poke.map/maps-int-46.pk: Likewise.
	* testsuite/poke.map/maps-int-47.pk: Likewise.
	* testsuite/poke.map/maps-int-49.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-11.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-2.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-5.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-6.pk: Likewise.
	* testsuite/poke.map/maps-int-union-3.pk: Likewise.
	* testsuite/poke.map/maps-int-union-4.pk: Likewise.
	* testsuite/poke.map/maps-int-union-5.pk: Likewise.